<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".presentation.fragment.main.MainFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_display_500"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:layout_gravity="start"/>


        <ImageView
            android:id="@+id/login"
            android:layout_marginEnd="16dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:src="@drawable/user"/>


    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcViewDirectory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/cart"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/cart"
        app:layout_constraintEnd_toStartOf="@+id/heart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rcViewDirectory" />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cart"
        app:layout_constraintTop_toBottomOf="@+id/rcViewDirectory" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/settings"
        app:layout_constraintEnd_toEndOf="@+id/heart"
        app:layout_constraintStart_toStartOf="@+id/cart"
        app:layout_constraintTop_toBottomOf="@+id/heart" />

    <TextView
        android:id="@+id/textCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_700"
        app:layout_constraintEnd_toEndOf="@+id/cart"
        app:layout_constraintStart_toStartOf="@+id/cart"
        app:layout_constraintTop_toBottomOf="@+id/cart" />

    <TextView
        android:id="@+id/textHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_700"
        app:layout_constraintEnd_toEndOf="@+id/heart"
        app:layout_constraintStart_toStartOf="@+id/heart"
        app:layout_constraintTop_toBottomOf="@+id/heart" />

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_700"
        app:layout_constraintEnd_toEndOf="@+id/settings"
        app:layout_constraintStart_toStartOf="@+id/settings"
        app:layout_constraintTop_toBottomOf="@+id/settings" />


</androidx.constraintlayout.widget.ConstraintLayout>